--- a/src/css-summoner/styles/form/base.css
+++ b/src/css-summoner/styles/form/base.css
@@ -1,14 +1,36 @@
 @layer base {
 	:root {
-		
 		--form-font-family: var(--font, sans-serif);
-		--form-border-radius: 0.375rem; 
+		--form-border-radius: 0.375rem;
 		--form-border-width: 1px;
-		--form-padding-x: 0.75rem; 
-		--form-padding-y: 0.5rem; 
-		--form-font-size: 1rem; 
-		--form-line-height: 1.5; 
+		--form-padding-x: 0.75rem;
+		--form-padding-y: 0.5rem;
+		--form-font-size: 1rem;
+		--form-line-height: 1.5;
+	}
 
+	.form-field {
+		display: flex;
+		flex-direction: row;
+		gap: 0.5rem;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.form-field-inline {
+		display: flex;
+		flex-direction: row;
+		gap: 0.5rem;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.form-search-container {
+		display: flex;
+		flex-direction: row;
+		gap: 0.5rem;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.form-checkbox:checked {
@@ -20,14 +42,8 @@
 
 	.form-checkbox:checked,
 	.form-radio:checked {
-		background-color: var(
-			--component-active-color,
-			var(--component-color)
-		); 
-		border-color: var(
-			--component-active-color,
-			var(--component-color)
-		); 
-		position: relative; 
+		background-color: var(--component-active-color, var(--component-color));
+		border-color: var(--component-active-color, var(--component-color));
+		position: relative;
 	}
 }
