--- a/src/css-summoner/ui/layouts/DocLayout.astro
+++ b/src/css-summoner/ui/layouts/DocLayout.astro
@@ -25,16 +25,16 @@ const mainClass = 'container mx-auto px-global max-w-screen-2xl'
 		<Header />
 		<main class={mainClass}>
 			<div class='mt-6'>
-				<a href='/' class='text-primary hover:underline'>
-					← クラスビルダーに戻る
+				<a href='/' class='btn-base btn-link btn-sm theme-inverse no-default'>
+					← back to css-summoner
 				</a>
 			</div>
 			<Menu />
 			<slot />
 			<Menu />
 			<div class='mt-6'>
-				<a href='/' class='text-primary hover:underline'>
-					← クラスビルダーに戻る
+				<a href='/' class='btn-base btn-link btn-sm theme-inverse no-default'>
+					← back to css-summoner
 				</a>
 			</div>
 		</main>
