--- a/src/css-summoner/styles/form/utilities.css
+++ b/src/css-summoner/styles/form/utilities.css
@@ -15,16 +15,6 @@
 		background-image: none;
 	}
 
-	.form-input.is-valid,
-	.form-select.is-valid,
-	.form-textarea.is-valid {
-		border-color: var(--success, green);
-	}
-	.form-input.is-invalid,
-	.form-select.is-invalid,
-	.form-textarea.is-invalid {
-		border-color: var(--error, red);
-	}
 	.form-xs {
 		@apply text-xs;
 		padding: 0.125rem 0.375rem;
@@ -35,6 +25,11 @@
 			height: 0.875rem;
 			aspect-ratio: 1;
 			padding: 0;
+		}
+
+		&.form-select {
+			padding: 0.5rem;
+			padding-right: 2rem;
 		}
 	}
 	.form-sm {
@@ -106,6 +101,20 @@
 		&.rounded-full {
 			border-radius: 9999px;
 		}
+	}
+
+	.form-checkbox:checked {
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='white'%3E%3Cpath fill-rule='evenodd' d='M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z' clip-rule='evenodd'/%3E%3C/svg%3E");
+		background-size: 80%;
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+
+	.form-checkbox:checked,
+	.form-radio:checked {
+		background-color: var(--component-active-color, var(--component-color));
+		border-color: var(--component-active-color, var(--component-color));
+		position: relative;
 	}
 
 	.form-success {
