--- a/src/css-summoner/ui/components/astro/VariantPreview.astro
+++ b/src/css-summoner/ui/components/astro/VariantPreview.astro
@@ -17,11 +17,9 @@ const formattedVariantName = variant
 	.replace(/\b[a-z]/g, (c) => c.toUpperCase())
 ---
 
-<div>
+<div class='flex flex-col items-start gap-3'>
 	<h3 class='text-lg font-medium break-words'>{formattedVariantName}</h3>
 	<Fragment set:html={previewHtml} />
-	<code class='block text-sm text-neutral-700 mt-1 break-words'
-		>.{className}</code
-	>
-	<p class='text-sm text-neutral-600 mb-4 break-words'>{description}</p>
+	<code class='block text-sm mt-1 break-words'>.{className}</code>
+	<p class='text-sm mb-4 break-words'>{description}</p>
 </div>
