--- a/src/css-summoner/ui/layouts/Menu.astro
+++ b/src/css-summoner/ui/layouts/Menu.astro
@@ -36,7 +36,7 @@ const menuItems = pages.filter(
 					<li>
 						<a
 							href={item.url}
-							class='btn-base btn-subtle btn-xs rounded shadow theme-neutral animate-down tran-200 no-default'
+							class='btn-base btn-link btn-xs rounded shadow theme-inverse animate-down tran-200 no-default'
 						>
 							{fileName}
 						</a>
